# url-shortener-mlh-pe

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  run.py
.github/workflows/: k8s-deploy.yml  test-ci.yml
app/: __init__.py  cache.py  database.py  event_pipeline.py  json_request.py  local_discord_log.py  logging_config.py  prometheus_metrics.py  temp_discord_request_dump.py
app/models/: __init__.py  event.py  url.py  user.py
app/routes/: __init__.py  events.py  maintenance.py  urls.py  users.py
config/: app-ingress.yml  deployment.yml  letsencrypt-issuer.yml
config/monitoring/: grafana-alerting-policies-configmap.yml  grafana-contact-points-secret.yml  grafana-dashboard-configmap.yml  grafana-dashboard-url-shortener.json  kube-prometheus-stack-values.yml  monitoring-ingress.yml  url-shortener-monitoring.yml
data/: events.csv  urls.csv  users.csv
deployment/: gunicorn.conf.py
docs/: ARCHITECTURE.md  CONFIG_REFERENCE.md  DEPLOY_GUIDE.md  FAILURE_MODES.md  LOAD_TEST_BASELINE.md  RUNBOOK.md  TROUBLESHOOTING.md  api-docs.md  capacity-plan.md  decision-log.md
docs/quests/: README.md
scripts/: add_url_user_original_url_index.py
tests/: conftest.py  test_api_integration.py  test_cache.py  test_database.py  test_event_pipeline.py  test_health.py  test_incident_assets.py  test_json_request.py  test_observability.py  test_perf_assets.py  test_prometheus_metrics.py  test_urls.py  test_users.py
tests/perf/: k6_1000_concurrent_spike.js  k6_200_concurrent_spike.js  k6_500_concurrent_spike.js  k6_500_error_spike.js  (+5 more)
(+6 files in other folders)
